Mqqt message update
updated structure of Mqqt request and message

--- a/Leo5TheThingsNetworkDataProvider/Leo5TheThingsNetworkDataProvider/Leo5TheThingsNetworkDataProvider.csproj
+++ b/Leo5TheThingsNetworkDataProvider/Leo5TheThingsNetworkDataProvider/Leo5TheThingsNetworkDataProvider.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConstants.cs" />
+    <Compile Include="Gateway.cs" />
     <Compile Include="GoogleSheetWriter.cs" />
     <Compile Include="Leo5TheThingNetworkPayload.cs" />
     <Compile Include="Leo5TheThingNetworkPayloadConverter.cs" />
@@ -95,9 +96,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="client_secret.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
